# free-lunch-ai

./: .gitignore  CATALOG.md  INSTRUCTIONS.md  README.md  pyproject.toml  requirements.txt
doc/: api_key_name.csv  model_config.xls  models.md
examples/: .env.example  api_call.ipynb  demo.ipynb  menu.yaml
src/: model_list.py
src/free_lunch/: __init__.py  config.py  defaults.py  light_router.py  llm_factory.py  menu.py  rag.py  router.py  tools.py
src/free_lunch_ai/: config.py  llm_factory.py  lunchbox.py  router.py
tests/: README.md  test_connections.py  test_content_blocks.py  test_rag.py  test_web_tools.py
